# stream-shell

./: .bazelrc  .clang-format  .gitignore  BUILD  MODULE.bazel  README.md
.github/workflows/: pages_deploy.yaml
main/: BUILD  main.cpp
patches/: 219.patch  linenoise-cpp.patch
stream-shell/: BUILD  builtin.h  closure.h  command.h  config.cpp  config.h  lift.h  main.cpp  operand.h  operand_op.h  pipeline.h  repl.h  scope.h  stream_parser.cpp  stream_parser.h  stream_printer.cpp  stream_printer.h  stream_transform.h  to_stream.h  to_string.h  tokenize.cpp  tokenize.h  value.h  value_op.h  variant_ext.h
stream-shell/builtins/: add.h  args.h  echo.h  get.h  now.h  prepend.h
stream-shell/js/: BUILD  dev.sh  index.html  main.cpp  main.css  main.js
stream-shell/test/: BUILD  config_test.cpp  example.cpp  stream_parser_test.cpp  test_env.h  tokenize_test.cpp
util/: BUILD  to_string_view.h  trim.h
