module(name = "stream-shell", version = "0.1")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "protobuf", version = "30.0")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

git_override(
  module_name = "hedron_compile_commands",
  remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
  commit = "4f28899228fb3ad0126897876f147ca15026151e",
  patches = [
    "//patches:219.patch"
  ],
)
