module(name = "stream-shell", version = "0.1")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "range-v3", version = "0.12.0")
bazel_dep(name = "protobuf", version = "30.0")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "boost.test", version = "1.87.0", dev_dependency = True)

bazel_dep(name = "linenoise.cpp", version = "0.1.0")
git_override(
  module_name = "linenoise.cpp",
  remote = "https://github.com/ericcurtin/linenoise.cpp.git",
  commit = "46ccdf825b47a813d9a1f926043cf8ebd662e371",
  patches = [
    "//patches:linenoise-cpp.patch"
  ],
)

git_override(
  module_name = "hedron_compile_commands",
  remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
  commit = "4f28899228fb3ad0126897876f147ca15026151e",
  patches = [
    "//patches:bazel-compile-commands-extractor.patch",
  ],
)
